Fixed bug on mobile navigation

--- a/css/style.scss
+++ b/css/style.scss
@@ -112,6 +112,9 @@ header{
         .nav-active{
             transform: translateX(0%);
         }
+        > ul.open{
+            display: block;
+        }
         > ul{
             @include flex-box(column);
             padding-right: 0;
